Modifications request of finishing area

--- a/GD.FinishingSystem.WEB/Views/Floor/CreateOrUpdate.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Floor/CreateOrUpdate.cshtml
@@ -9,12 +9,12 @@
         @if (Model.FloorID == 0)
         {
             @Html.Raw("Create")
-            ViewData["Title"] = "Create Definition Information";
+            ViewData["Title"] = "Create Floor Information";
         }
         else
         {
             @Html.Raw("Edit")
-            ViewData["Title"] = "Edit Definition Information";
+            ViewData["Title"] = "Edit Floor Information";
         }
     </h1>
 
