--- a/GD.FinishingSystem.WEB/Views/Account/RoleManager.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Account/RoleManager.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<string>
 @{
-    string[] FormList = new string[] { "Rulo", "RuloProcess", "DefinitionProcess", "TestResult", "Machine" };
+    string[] FormList = new string[] { "Rulo", "RuloProcess", "DefinitionProcess", "TestResult", "Machine", "Sample"};
 
     ViewData["Title"] = "Authorize  ";
     Layout = "~/Views/Shared/_Layout.cshtml";
