--- a/GD.FinishingSystem.WEB/Views/DefinationProcess/Index.cshtml
+++ b/GD.FinishingSystem.WEB/Views/DefinationProcess/Index.cshtml
@@ -71,27 +71,34 @@
                             <a asp-controller="DefinationProcess" asp-action="Edit" asp-route-definationprocessid="@item.DefinationProcessID">
                                 <i class="lni lni-slice"></i>
                             </a>
-                            @Html.Raw(" | ");
                         }
                         @if (User.IsInRole("DefinitionProcessShow") || User.IsInRole("AdminFull") || User.IsInRole("DefinitionProcessFull"))
                         {
-                            <a asp-controller="DefinationProcess" asp-action="Details" asp-route-definationprocessid="@item.DefinationProcessID">
-                                <i class="lni lni-question-circle"></i>
-                            </a>
-                            @Html.Raw(" | ");
-                        }
+                            if (User.IsInRole("DefinitionProcess", AuthType.Update))
+                                @Html.Raw(" | ");
+
+                                <a asp-controller="DefinationProcess" asp-action="Details" asp-route-definationprocessid="@item.DefinationProcessID">
+                                    <i class="lni lni-question-circle"></i>
+                                </a>
+                            }
                         @if (User.IsInRole("DefinitionProcessDel") || User.IsInRole("AdminFull") || User.IsInRole("DefinitionProcessFull"))
                         {
-                            <a asp-controller="DefinationProcess" asp-action="Delete" asp-route-definationprocessid="@item.DefinationProcessID">
-                                <i class="lni lni-circle-minus"></i>
-                            </a>
-                        }
+                            if (User.IsInRole("DefinitionProcess", AuthType.Update) || User.IsInRole("DefinitionProcess", AuthType.Show))
+                                @Html.Raw(" | ");
+
+                                <a asp-controller="DefinationProcess" asp-action="Delete" asp-route-definationprocessid="@item.DefinationProcessID">
+                                    <i class="lni lni-circle-minus"></i>
+                                </a>
+                            }
                         @if (User.IsInRole("DefinitionProcess", AuthType.Show))
                         {
-                            <a alt="Machines" onclick="showMachines(@item.DefinationProcessID);" href="#" data-toggle="modal" data-target="#modalDialogMachines">
-                                <i class="lni lni-direction-alt"></i>
-                            </a>
-                        }
+                            if (User.IsInRole("DefinitionProcess", AuthType.Update) || User.IsInRole("DefinitionProcess", AuthType.Show) || User.IsInRole("DefinitionProcess", AuthType.Delete))
+                                @Html.Raw(" | ");
+
+                                <a alt="Machines" onclick="showMachines(@item.DefinationProcessID);" href="#" data-toggle="modal" data-target="#modalDialogMachines">
+                                    <i class="lni lni-direction-alt"></i>
+                                </a>
+                            }
                     </div>
 
                 </td>
