--- a/GD.FinishingSystem.WEB/Views/Machine/Index.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Machine/Index.cshtml
@@ -11,13 +11,18 @@
 {
     if (relDefinationProcessId != 0)
     {
-        <p>
-            <a asp-action="Create" asp-route-reldefinationprocessid="@relDefinationProcessId" class="btn btn-sm btn-outline-light border-dark border-dark btn-dark">
-                <i class="lni lni-circle-plus"></i> Create New
-            </a>
-        </p>
+        <a asp-action="Create" asp-route-reldefinationprocessid="@relDefinationProcessId" class="btn btn-sm btn-outline-light border-dark border-dark btn-dark">
+            <i class="lni lni-circle-plus"></i> Create New
+        </a>
     }
 }
+
+@if (User.IsInRole("Machine", AuthType.Add))
+    @Html.Raw(" | ")
+
+<a asp-action="Index" asp-controller="DefinationProcess" class="btn btn-sm btn-secondary"><i class="lni lni-chevron-left-circle"></i> Back to Definition Processes</a>
+<br />
+<br />
 
 <table class="table table-sm table-hover table-responsive-lg">
     <thead>
@@ -47,47 +52,52 @@
     <tbody>
         @foreach (var item in Model)
         {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ID)
-            </td>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ID)
+                </td>
 
-            <td>
-                @Html.DisplayFor(modelItem => item.MachineCode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MachineName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.processName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FloorName)
-            </td>
-            <td>
-                @if (User.IsInRole("MachineUp") || User.IsInRole("MachineFull") || User.IsInRole("AdminFull"))
-                {
-                    <a asp-controller="Machine" asp-action="Edit" asp-route-machineid="@item.ID">
-                        <i class="lni lni-slice"></i>
-                    </a>
-                    @Html.Raw(" | ");
-                }
-                @if (User.IsInRole("MachineUp") || User.IsInRole("MachineFull") || User.IsInRole("AdminFull"))
-                {
-                    <a asp-controller="Machine" asp-action="Details" asp-route-machineid="@item.ID">
-                        <i class="lni lni-question-circle"></i>
-                    </a>
-                    @Html.Raw(" | ");
-                }
-                @if (User.IsInRole("MachineUp") || User.IsInRole("MachineFull") || User.IsInRole("AdminFull"))
-                {
-                    <a asp-controller="Machine" asp-action="Delete" asp-route-machineid="@item.ID">
-                        <i class="lni lni-circle-minus"></i>
-                    </a>
-                }
+                <td>
+                    @Html.DisplayFor(modelItem => item.MachineCode)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.MachineName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.processName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FloorName)
+                </td>
+                <td>
+                    @if (User.IsInRole("MachineUp") || User.IsInRole("MachineFull") || User.IsInRole("AdminFull"))
+                    {
+                        <a asp-controller="Machine" asp-action="Edit" asp-route-machineid="@item.ID">
+                            <i class="lni lni-slice"></i>
+                        </a>
 
-            </td>
-        </tr>
+                    }
+                    @if (User.IsInRole("MachineUp") || User.IsInRole("MachineFull") || User.IsInRole("AdminFull"))
+                    {
+                        if (User.IsInRole("Machine", AuthType.Update))
+                            @Html.Raw(" | ");
+
+                            <a asp-controller="Machine" asp-action="Details" asp-route-machineid="@item.ID">
+                                <i class="lni lni-question-circle"></i>
+                            </a>
+                        }
+                    @if (User.IsInRole("MachineUp") || User.IsInRole("MachineFull") || User.IsInRole("AdminFull"))
+                    {
+                        if (User.IsInRole("Machine", AuthType.Update) || User.IsInRole("Machine", AuthType.Show))
+                            @Html.Raw(" | ");
+
+                            <a asp-controller="Machine" asp-action="Delete" asp-route-machineid="@item.ID">
+                                <i class="lni lni-circle-minus"></i>
+                            </a>
+                        }
+
+                </td>
+            </tr>
         }
     </tbody>
 </table>
