--- a/GD.FinishingSystem.WEB/Views/Rulo/Details.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Rulo/Details.cshtml
@@ -75,7 +75,7 @@
             @Html.DisplayNameFor(model => model.IsWaitingAnswerFromTest)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.IsWaitingAnswerFromTest)
+            @Html.Raw(Model.IsWaitingAnswerFromTest ? "YES" : "NO")
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.OriginID)
@@ -99,13 +99,27 @@
             @Html.DisplayNameFor(model => model.CanContinue)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CanContinue)
+            @Html.Raw(Model.CanContinue ? "YES" : "NO")
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TestResultAuthorizer)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TestResultAuthorizer)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.FolioNumber)
+        </dt>
+        <dd class="col-sm-10">
+            <span style="color:red; font-weight:bold">
+                @Html.DisplayFor(model => model.FolioNumber)
+            </span>
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.DeliveryDate)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.Raw(Model.DeliveryDate?.ToString("yyyy-MM-dd HH:mm"))
         </dd>
 
     </dl>
