--- a/GD.FinishingSystem.WEB/Views/TestCategory/Index.cshtml
+++ b/GD.FinishingSystem.WEB/Views/TestCategory/Index.cshtml
@@ -53,21 +53,26 @@
                         <a asp-action="Edit" asp-route-testcategoryid="@item.TestCategoryID">
                             <i class="lni lni-slice"></i>
                         </a>
-                        @Html.Raw(" | ");
                     }
                     @if (User.IsInRole("TestCategoryShow") || User.IsInRole("TestCategoryFull") || User.IsInRole("AdminFull"))
                     {
-                        <a asp-action="Details" asp-route-testcategoryid="@item.TestCategoryID">
-                            <i class="lni lni-question-circle"></i>
-                        </a>
-                        @Html.Raw(" | ");
-                    }
+                        if (User.IsInRole("TestCategory", AuthType.Update))
+                            @Html.Raw(" | ")
+
+                            <a asp-action="Details" asp-route-testcategoryid="@item.TestCategoryID">
+                                <i class="lni lni-question-circle"></i>
+                            </a>
+
+                        }
                     @if (User.IsInRole("TestCategoryDel") || User.IsInRole("TestCategoryFull") || User.IsInRole("AdminFull"))
                     {
-                        <a asp-action="Delete" asp-route-testcategoryid="@item.TestCategoryID">
-                            <i class="lni lni-circle-minus"></i>
-                        </a>
-                    }
+                        if (User.IsInRole("TestCategory", AuthType.Update) || User.IsInRole("TestCategory", AuthType.Show))
+                            @Html.Raw(" | ")
+
+                            <a asp-action="Delete" asp-route-testcategoryid="@item.TestCategoryID">
+                                <i class="lni lni-circle-minus"></i>
+                            </a>
+                        }
                 </td>
             </tr>
         }
