--- a/GD.FinishingSystem.WEB/Views/RuloProcess/Delete.cshtml
+++ b/GD.FinishingSystem.WEB/Views/RuloProcess/Delete.cshtml
@@ -33,13 +33,13 @@
             @Html.DisplayNameFor(model => model.BeginningDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.BeginningDate)
+            @Html.Raw(Model.BeginningDate.ToString("yyyy-MM-dd HH:mm"))
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.EndDate)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EndDate)
+        <dd class="col-sm-10">
+            @Html.Raw(Model.EndDate?.ToString("yyyy-MM-dd HH:mm"))
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FinishMeter)
@@ -51,7 +51,7 @@
             @Html.DisplayNameFor(model => model.IsFinished)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsFinished)
+            @Html.Raw(Model.IsFinished ? "YES" : "NO")
         </dd>
        
     </dl>
