--- a/GD.FinishingSystem.WEB/Views/RuloProcess/Details.cshtml
+++ b/GD.FinishingSystem.WEB/Views/RuloProcess/Details.cshtml
@@ -32,13 +32,13 @@
             @Html.DisplayNameFor(model => model.BeginningDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.BeginningDate)
+            @Html.Raw(Model.BeginningDate.ToString("yyyy-MM-dd HH:mm"))
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.EndDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EndDate)
+            @Html.Raw(Model.EndDate?.ToString("yyyy-MM-dd HH:mm"))
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FinishMeter)
@@ -49,8 +49,8 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IsFinished)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsFinished)
+        <dd class="col-sm-10">
+            @Html.Raw(Model.IsFinished ? "YES" : "NO")
         </dd>
         
     </dl>
